force-app/main/default/objects/Checklist__c/fields/Admin_Chart_Organization_chart__c.field-meta.xml
<CustomField>
    <fullName>Admin_Chart_Organization_chart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.08 Organization chart</label>
    <type>Checkbox</type>
</CustomField>