force-app/main/default/objects/Checklist__c/fields/Admin_Check_Agency_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Admin_Check_Agency_Purpose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.08 Agency Purpose</label>
    <type>Checkbox</type>
</CustomField>