force-app/main/default/objects/Checklist__c/fields/Admin_Check_Agreements_or_contracts__c.field-meta.xml
<CustomField>
    <fullName>Admin_Check_Agreements_or_contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.08 Agreements or contracts</label>
    <type>Checkbox</type>
</CustomField>