force-app/main/default/objects/Checklist__c/fields/Admin_Check_Authorized_individuals__c.field-meta.xml
<CustomField>
    <fullName>Admin_Check_Authorized_individuals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.08 Authorized individuals</label>
    <type>Checkbox</type>
</CustomField>