force-app/main/default/objects/Checklist__c/fields/Admin_Check_Governing_board__c.field-meta.xml
<CustomField>
    <fullName>Admin_Check_Governing_board__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.08 Governing board</label>
    <type>Checkbox</type>
</CustomField>