force-app/main/default/objects/Checklist__c/fields/Admin_Check_Insurance_coverage__c.field-meta.xml
<CustomField>
    <fullName>Admin_Check_Insurance_coverage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.08 Insurance coverage</label>
    <type>Checkbox</type>
</CustomField>