force-app/main/default/objects/Checklist__c/fields/Admin_Check_Procedures_for_notification__c.field-meta.xml
<CustomField>
    <fullName>Admin_Check_Procedures_for_notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.08 Procedures for notification</label>
    <type>Checkbox</type>
</CustomField>