force-app/main/default/objects/Checklist__c/fields/Admin_Incorporation_papers__c.field-meta.xml
<CustomField>
    <fullName>Admin_Incorporation_papers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.08 Incorporation papers</label>
    <type>Checkbox</type>
</CustomField>