force-app/main/default/objects/Checklist__c/fields/Administrative_Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Section_Completed__c</fullName>
    <formula>OR( Admin_Incorporation_papers__c , Staff_health_reports__c , Recruitment_plan__c )</formula>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>