force-app/main/default/objects/Checklist__c/fields/Age_of_foster_parent_complete__c.field-meta.xml
<CustomField>
    <fullName>Age_of_foster_parent_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.09 Age of foster parent</label>
    <type>Checkbox</type>
</CustomField>