force-app/main/default/objects/Checklist__c/fields/Agency_Services__c.field-meta.xml
<CustomField>
    <fullName>Agency_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.08 Agency Services</inlineHelpText>
    <label>01.08 Agency Services</label>
    <type>Checkbox</type>
</CustomField>