force-app/main/default/objects/Checklist__c/fields/Annual_evaluation__c.field-meta.xml
<CustomField>
    <fullName>Annual_evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.13 Annual evaluation</label>
    <type>Checkbox</type>
</CustomField>