force-app/main/default/objects/Checklist__c/fields/Annual_medical_completed__c.field-meta.xml
<CustomField>
    <fullName>Annual_medical_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.17 Annual medical and dental completed</inlineHelpText>
    <label>02.17 Annual medical and dental</label>
    <type>Checkbox</type>
</CustomField>