force-app/main/default/objects/Checklist__c/fields/Annual_medical_reason__c.field-meta.xml
<CustomField>
    <fullName>Annual_medical_reason__c</fullName>
    <inlineHelpText>02.17 Annual medical and dental exams reason incomplete.</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>