force-app/main/default/objects/Checklist__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.13 Application</label>
    <type>Checkbox</type>
</CustomField>