force-app/main/default/objects/Checklist__c/fields/Application_complete__c.field-meta.xml
<CustomField>
    <fullName>Application_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Application</inlineHelpText>
    <label>03.10 Application</label>
    <type>Checkbox</type>
</CustomField>