force-app/main/default/objects/Checklist__c/fields/Approval_from_agency_complete__c.field-meta.xml
<CustomField>
    <fullName>Approval_from_agency_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.09 Approval from agency</label>
    <type>Checkbox</type>
</CustomField>