force-app/main/default/objects/Checklist__c/fields/Approved_annual_audit_or_review__c.field-meta.xml
<CustomField>
    <fullName>Approved_annual_audit_or_review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.07 Approved annual audit or review</label>
    <type>Checkbox</type>
</CustomField>