force-app/main/default/objects/Checklist__c/fields/Approved_annual_budget__c.field-meta.xml
<CustomField>
    <fullName>Approved_annual_budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.07 Approved annual budget</label>
    <type>Checkbox</type>
</CustomField>