force-app/main/default/objects/Checklist__c/fields/Availability_to_child__c.field-meta.xml
<CustomField>
    <fullName>Availability_to_child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>03.05 Availability to child</label>
    <type>Checkbox</type>
</CustomField>