force-app/main/default/objects/Checklist__c/fields/Availability_to_child_Reason__c.field-meta.xml
<CustomField>
    <fullName>Availability_to_child_Reason__c</fullName>
    <inlineHelpText>03.05 Availability to child Reason Incomplete.</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>