force-app/main/default/objects/Checklist__c/fields/Birth_records_Complete__c.field-meta.xml
<CustomField>
    <fullName>Birth_records_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>03.05 Birth records</label>
    <type>Checkbox</type>
</CustomField>