force-app/main/default/objects/Checklist__c/fields/Changes_complete__c.field-meta.xml
<CustomField>
    <fullName>Changes_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.09 Changes</label>
    <type>Checkbox</type>
</CustomField>