force-app/main/default/objects/Checklist__c/fields/Child_abuse_and_neglect_policy__c.field-meta.xml
<CustomField>
    <fullName>Child_abuse_and_neglect_policy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.08 Child abuse and neglect policy</inlineHelpText>
    <label>01.08 Child abuse and neglect policy</label>
    <type>Checkbox</type>
</CustomField>