force-app/main/default/objects/Checklist__c/fields/Child_abuse_neglect_records__c.field-meta.xml
<CustomField>
    <fullName>Child_abuse_neglect_records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.09 Child abuse &amp; neglect records</label>
    <type>Checkbox</type>
</CustomField>