force-app/main/default/objects/Checklist__c/fields/Child_abuse_notes__c.field-meta.xml
<CustomField>
    <fullName>Child_abuse_notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>