force-app/main/default/objects/Checklist__c/fields/Child_Abuse_Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Child_Abuse_Section_Completed__c</fullName>
    <formula>OR( Requirements_for_board_members__c , Finding_of_Abuse__c , Written_Policy__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>