force-app/main/default/objects/Checklist__c/fields/Child_Day_Care_Complete__c.field-meta.xml
<CustomField>
    <fullName>Child_Day_Care_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.09 Child Day Care</label>
    <type>Checkbox</type>
</CustomField>