force-app/main/default/objects/Checklist__c/fields/Child_management_and_discipline_plan__c.field-meta.xml
<CustomField>
    <fullName>Child_management_and_discipline_plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.08 Child management &amp; discipline plan</inlineHelpText>
    <label>01.08 Child management &amp; discipline plan</label>
    <type>Checkbox</type>
</CustomField>