force-app/main/default/objects/Checklist__c/fields/Childs_whereabouts_unkno_complet__c.field-meta.xml
<CustomField>
    <fullName>Childs_whereabouts_unkno_complet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.09 Child&apos;s whereabouts unkno complete</label>
    <type>Checkbox</type>
</CustomField>