force-app/main/default/objects/Checklist__c/fields/Compliance_with_non_discrimination__c.field-meta.xml
<CustomField>
    <fullName>Compliance_with_non_discrimination__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.08 Compliance with non-discrimination</inlineHelpText>
    <label>01.08 Compliance with non-discrimination</label>
    <type>Checkbox</type>
</CustomField>