force-app/main/default/objects/Checklist__c/fields/Confidential_interviewing_space__c.field-meta.xml
<CustomField>
    <fullName>Confidential_interviewing_space__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.10 Confidential interviewing space completed.</inlineHelpText>
    <label>01.10 Confidential interviewing space</label>
    <type>Checkbox</type>
</CustomField>