force-app/main/default/objects/Checklist__c/fields/Conflict_of_interest_complete__c.field-meta.xml
<CustomField>
    <fullName>Conflict_of_interest_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.09 Conflict of interest</label>
    <type>Checkbox</type>
</CustomField>