force-app/main/default/objects/Checklist__c/fields/Consideration_Adoption_Completed__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Adoption_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.09 Consideration of adoptive parent completed.</inlineHelpText>
    <label>03.09 Consideration of adoptive parent</label>
    <type>Checkbox</type>
</CustomField>