force-app/main/default/objects/Checklist__c/fields/Controlled_areas_for_files__c.field-meta.xml
<CustomField>
    <fullName>Controlled_areas_for_files__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.10 Controlled areas for files completed.</inlineHelpText>
    <label>01.10 Controlled areas for files</label>
    <type>Checkbox</type>
</CustomField>