force-app/main/default/objects/Checklist__c/fields/Controlled_areas_for_files_reason__c.field-meta.xml
<CustomField>
    <fullName>Controlled_areas_for_files_reason__c</fullName>
    <inlineHelpText>01.10 Controlled areas for files reason incomplete</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>