force-app/main/default/objects/Checklist__c/fields/Criminal_background_investigation__c.field-meta.xml
<CustomField>
    <fullName>Criminal_background_investigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>01.09 Criminal background investigation</label>
    <type>Checkbox</type>
</CustomField>