force-app/main/default/objects/Checklist__c/fields/Dangerous_household_items_complet__c.field-meta.xml
<CustomField>
    <fullName>Dangerous_household_items_complet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.10 Dangerous household items</label>
    <type>Checkbox</type>
</CustomField>