force-app/main/default/objects/Checklist__c/fields/Dental_eye_hearing_completed__c.field-meta.xml
<CustomField>
    <fullName>Dental_eye_hearing_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>02.17 Dental eye, hearing exam scheduled completed</inlineHelpText>
    <label>02.17 Dental eye, hearing exam scheduled</label>
    <type>Checkbox</type>
</CustomField>