force-app/main/default/objects/Checklist__c/fields/Dental_eye_hearing_reason__c.field-meta.xml
<CustomField>
    <fullName>Dental_eye_hearing_reason__c</fullName>
    <inlineHelpText>02.17 Dental eye, hearing exam scheduled reason incomplete</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>