force-app/main/default/objects/Checklist__c/fields/Discipline_Complete__c.field-meta.xml
<CustomField>
    <fullName>Discipline_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.09 Discipline</label>
    <type>Checkbox</type>
</CustomField>