force-app/main/default/objects/Checklist__c/fields/Document_child_s_safety_Complted__c.field-meta.xml
<CustomField>
    <fullName>Document_child_s_safety_Complted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>03.16 Document child&apos;s safety completed?</inlineHelpText>
    <label>03.16 Document child&apos;s safety</label>
    <type>Checkbox</type>
</CustomField>