force-app/main/default/objects/Checklist__c/fields/Document_child_s_safety_reason__c.field-meta.xml
<CustomField>
    <fullName>Document_child_s_safety_reason__c</fullName>
    <inlineHelpText>03.16 Document child&apos;s safety reason incomplete.</inlineHelpText>
    <label>Reason Incomplete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>