force-app/main/default/objects/Checklist__c/fields/Emergency_action_complete__c.field-meta.xml
<CustomField>
    <fullName>Emergency_action_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>02.16 Emergency action</label>
    <type>Checkbox</type>
</CustomField>