force-app/main/default/objects/Checklist__c/fields/Emergency_Plan__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.08 Emergency Plan</inlineHelpText>
    <label>01.08 Emergency Plan</label>
    <type>Checkbox</type>
</CustomField>