force-app/main/default/objects/Checklist__c/fields/Employee_Orientation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Employee_Orientation_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>