force-app/main/default/objects/Checklist__c/fields/Employee_Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Employee_Section_Completed__c</fullName>
    <formula>Written_plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section Completed?</label>
    <type>Checkbox</type>
</CustomField>