force-app/main/default/objects/Checklist__c/fields/Employee_training__c.field-meta.xml
<CustomField>
    <fullName>Employee_training__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>01.08 Employee training</inlineHelpText>
    <label>01.08 Employee training</label>
    <type>Checkbox</type>
</CustomField>